[package]
name = "heimdallr"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
config_rs = { package = "config", version = "0.10.1" }
crossbeam-channel = "0.5.1"
ctrlc = { version = "3.1", features = [ "termination" ] }
dotenv = "0.15.0"
env_logger = "0.6"
ethabi = "12.0.0"
ethers-signers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3"
log = "0.4"
prost = "0.7.0"
prost-types = "0.7.0"
rdkafka = { version = "0.25.0", features = [ "cmake-build" ] }
rust_decimal = { version = "1.10.3", features = [ "postgres", "bytes", "byteorder" ] }
rust_decimal_macros = "1.10.3"
serde = { version = "1.0.124", features = [ "derive" ] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal", "json", "migrate" ] }
tokio = { version = "1.0", features = [ "full" ] }
tonic = "0.4.0"
web3 = "0.13.0"

[build-dependencies]
prost = "0.7.0"
tonic-build = "0.4.0"

[[bin]]
name = "faucet"
path = "src/bin/faucet.rs"

[[bin]]
name = "tele_out"
path = "src/bin/tele_out.rs"
