[package]
name = "regnbue-bridge"
version = "0.1.0"
authors = ["HAOYUatHZ <haoyu@protonmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
config_rs = { package = "config", version = "0.10.1" }
const_format = "0.2.15"
crossbeam-channel = "0.5.1"
ctrlc = { version = "3.1", features = [ "termination" ] }
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
fluidex-common = { git = "https://github.com/fluidex/common-rs", branch = "master", features = [ "kafka", "non-blocking-tracing", "rollup-state-db" ] }
futures = "0.3"
log = "0.4"
orchestra = { git = "https://github.com/fluidex/orchestra.git", branch = "master", features = [ "exchange" ] }
prost = "0.8.0"
prost-types = "0.8.0"
rust_decimal = { version = "1.10.3", features = [ "postgres", "bytes", "byteorder" ] }
serde = { version = "1.0.124", features = [ "derive" ] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal", "json", "migrate" ] }
tokio = { version = "1.0", features = [ "full" ] }
tonic = "0.5.2"

[build-dependencies]
prost = "0.7.0"
tonic-build = "0.4.0"

[features]
default = ["ganache"]
ganache = []

[[bin]]
name = "block_submitter"
path = "src/bin/block_submitter.rs"

[[bin]]
name = "faucet"
path = "src/bin/faucet.rs"

[[bin]]
name = "tele_out"
path = "src/bin/tele_out.rs"
